--- a/index.html
+++ b/index.html
@@ -56,13 +56,16 @@
   </style>
 </head>
 <body>
+  
   <div class="login-container">
+    <img src="esa-logo.png" alt="ESA Logo" style="width: 100px; margin-bottom: 20px;" />
     <h2>Admin Login</h2>
     <input type="text" id="username" placeholder="Username" />
     <input type="password" id="password" placeholder="Password" />
     <button onclick="login()">Login</button>
     <div class="error" id="errorMsg"></div>
   </div>
+  
 
   <script>
     function login() {
