--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       const password = document.getElementById("password").value.trim();
       const errorMsg = document.getElementById("errorMsg");
 
-      if (username === "admin" && password === "admin") {
+      if (username === "admin" && password === "admin2") {
         window.location.href = "admin.htm";
       } else {
         errorMsg.innerText = "Invalid username or password.";
