--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
       const password = document.getElementById("password").value.trim();
       const errorMsg = document.getElementById("errorMsg");
 
-      if (username === "admin" && password === "admin2") {
-        window.location.href = "admin.htm";
+      if (username === "admin" && password === "admin") {
+        window.location.href = "admin2.htm";
       } else {
         errorMsg.innerText = "Invalid username or password.";
       }
