--- a/admin.htm
+++ b/admin.htm
@@ -74,7 +74,10 @@
 </head>
 <body>
   <h2>Admin Ticket Sales Dashboard</h2>
-
+  
+  <button onclick="window.location.href='index.html'" style="background-color: #007bff; color: white; border: none; padding: 10px; border-radius: 5px; font-weight: bold; margin-bottom: 20px; cursor: pointer;">
+    🔙 Back to Login
+  </button>
   <button id="viewAllBtn">📊 View All Sales Entries</button>
   <button id="viewTicketTypeBtn">🎟️ View Ticket Type Analysis</button>
   <h3>List of Salespersons</h3>
