--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       const errorMsg = document.getElementById("errorMsg");
 
       if (username === "admin" && password === "admin") {
-        window.location.href = "admin2.htm";
+        window.location.href = "admin.htm";
       } else {
         errorMsg.innerText = "Invalid username or password.";
       }
